<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/design_default_color_background"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lvResultado"
                        android:textColor="@color/design_default_color_primary"
                        android:textSize="20sp" />
                    <!-- El texto scaneado se muestra aquí -->
                    <EditText
                        android:id="@+id/etResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:background="@null"
                        android:padding="5dp"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:importantForAutofill="no" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="135dp"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_height="0dp"
                            android:layout_width="match_parent"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="clear"
                            android:text="@string/btnClear"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:layout_height="0dp"
                            android:layout_width="match_parent"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="traduce"
                            android:text="@string/btnTraduce"
                            android:textSize="12sp" />



                    </LinearLayout>
                    <EditText
                        android:id="@+id/etTranslated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:background="@null"
                        android:padding="5dp"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:importantForAutofill="no" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/design_default_color_background"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:text="@string/lvImage"
                        android:textColor="@color/design_default_color_primary"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <!-- La imagén tomada se muestra aquí -->
                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="250dp"
                        android:contentDescription="@string/ivImageDesc" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>